@@ -1,3 +1,7 @@
+2001-09-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* sample.tmdarc: Add REVOKED_FILE and BOUNCE_REVOKED_CC.
+
 2001-09-12  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda.spec: Raise version number to 0.36.
